--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     </form>
 
     <!-- affichage des mesages -->
-    <div id = "messages"><h2>chatbox</h2></div>
+    <h2 id="actualChanInChatbox">chatbox</h2></div>
+    <div id="conv"></div>
     <form id="sendMessage">
         <input type="text" id="msg" autocomplete="off" />
         <button>send</button>
@@ -44,6 +45,7 @@
 
         //connexion au server
         const socket = io();
+        channelInChatbox = -1;
         window.onload = () => {
 
             // PARTIE EMISSION
@@ -63,7 +65,7 @@
 
                 //recuperation du message et envoi
                 const message_text = document.querySelector("#msg").value;
-                socket.emit("chat_message", message_text );
+                socket.emit("chat_message", message_text, channelInChatbox);
             })
 
             // creer un channel
@@ -73,6 +75,7 @@
                 //recuperation du nom du chan et envoi
                 const nameChannel = document.querySelector("#newChan").value;
                 socket.emit("create_channel", nameChannel);
+                document.querySelector("#newChan").value = "";
             })
             // selectionnner un channel
             document.querySelector("#listChannel").addEventListener("click", (e) => {
@@ -80,7 +83,14 @@
                     socket.emit("selectChan", e.target.id);
                 }
             })
+            document.querySelector("#joinChan").addEventListener("submit", (e) => {
+                e.preventDefault();
 
+                //recuperation du nom du chan et envoi
+                const nameChannel = document.querySelector("#existingChan").value;
+                socket.emit("joinChannel", nameChannel);
+                document.querySelector("#existingChan").value = "";
+            })
             // PARTIE RECEPTION
 
             // mise a jour du userName
@@ -88,10 +98,28 @@
                 (document.querySelector("#setUser")).remove();
                 document.querySelector("#userNameSession").innerHTML += `<h1>utilsateur: ${name}</h1>`
             })
+            // afficher le channel dans la chatbox
+            socket.on("updateChatBox", (channel, histMessage) => {
+
+                // afficher le nom du channel
+                (document.querySelector("#actualChanInChatbox")).textContent = channel.name;
+
+                //afficher les message
+                const listMessage = document.querySelector("#conv");
+                while (listMessage.firstChild) {
+                    listMessage.removeChild(listMessage.firstChild);
+                }
+                histMessage.forEach((messages) => {
+                    const messageElement = document.createElement("ul");
+                    console.log(messages);
+                    messageElement.textContent = `from ${messages.user.username}: ${messages.text}`;
+                    listMessage.appendChild(messageElement);
+                });
+
+            })
             // listen to chat_message event
             socket.on("chat_message", (msg) => {
                 console.log(msg);
-                document.querySelector("#messages").innerHTML += `<p>${msg}</p>`
                 document.querySelector("#msg").value = "";
             })
             //update la liste de channel
@@ -103,14 +131,14 @@
                 lstChan.forEach((channel) => {
                     const channelElement = document.createElement("button");
                     channelElement.textContent = `Name : ${channel.name} |  ID : ${channel.id}`;
-                    channelElement.id = `${channel.id}` 
+                    channelElement.id = `${channel.id}`
                     divLstChan.appendChild(channelElement);
                 });
             })
 
             // selection d'un channel pour la chatBox
             socket.on("selectedChannel", (channelForChatBox) => {
-                console.log(channelForChatBox);
+                channelInChatbox = channelForChatBox.id;
             })
         }
     </script>
